--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
           <h4>Candle Design</h4>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, ipsam!</p>
           <h2>Souces:Code</h2>
-          <a href="https://www.npmjs.com/package/candle-project?activeTab=code" target="_blank"><i
+          <a href="https://github.com/myproject2025/Candle-Design.git" target="_blank"><i
               class='bx bx-link-external'></i></a>
         </div>
       </div>
@@ -143,7 +143,7 @@
           <h4>My Design</h4>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, ipsam!</p>
           <h2>Souces:Code</h2>
-          <a href="https://www.npmjs.com/package/ai_service_website?activeTab=code" target="_blank"><i
+          <a href="https://github.com/myproject2025/Ai-Service-Website.git" target="_blank"><i
               class='bx bx-link-external'></i></a>
         </div>
       </div>
@@ -151,10 +151,10 @@
       <div class="protifolio-box">
         <img src="imag/agecalcul.png" alt="" class="iii">
         <div class="portifolio-layer">
-          <h4>Gym Design</h4>
+          <h4>Age Calculator</h4>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, ipsam!</p>
           <h2>Souces:Code</h2>
-          <a href="https://www.npmjs.com/package/fit_fusion_gym?activeTab=code" target="_blank"><i
+          <a href="https://github.com/myproject2025/Age-Calculator.git" target="_blank"><i
               class='bx bx-link-external'></i></a>
         </div>
       </div>
@@ -165,7 +165,7 @@
           <h4>TicTacToeGame Project</h4>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, ipsam!</p>
           <h2>Souces:Code</h2>
-          <a href="https://www.npmjs.com/package/tic_tac_toa?activeTab=code" target="_blank"><i
+          <a href="https://github.com/myproject2025/Tic-Tac-Toa.git" target="_blank"><i
               class='bx bx-link-external'></i></a>
         </div>
       </div>
@@ -176,7 +176,7 @@
           <h4>SnakeGame Project</h4>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, ipsam!</p>
           <h2>Souces:Code</h2>
-          <a href="https://www.npmjs.com/package/snack_game_project?activeTab=code" target="_blank"><i
+          <a href="https://github.com/myproject2025/Snacke-Game.git" target="_blank"><i
               class='bx bx-link-external'></i></a>
         </div>
       </div>
